# test_lingvanex_one

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
filter_page/: apps.py  filter.py  models.py  urls.py  utils.py  views.py
filter_page/management/commands/: init_date.py
filter_page/migrations/: 0001_initial.py
filter_page/templates/: base.html  paginator.html  searchform.html  table.html
main/: settings.py  urls.py
tests/: conftest.py  test_parser.py
