[tool.poetry]
name = "test-lingvanex-1"
version = "0.1.0"
description = ""
authors = ["polenom <vitalimitsevich@yandex.by>"]
readme = "README.md"
packages = [{include = "test_lingvanex_1"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
pytest = "^7.2.0"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
